--- a/src/App.Metrics.Reporting.InfluxDB/App.Metrics.Reporting.InfluxDB.csproj
+++ b/src/App.Metrics.Reporting.InfluxDB/App.Metrics.Reporting.InfluxDB.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="App.Metrics.Abstractions" Version="$(AppMetricsCoreVersion)" />
+    <PackageReference Include="Polly-Signed" Version="5.8.0" />
   </ItemGroup>
 
 </Project>
